crates/toml/tests/snapshots/invalid/inline-table/no-comma-02.stderr
TOML parse error at line 1, column 42
  |
1 | arrr = { comma-missing = true valid-toml = false }
  |                                          ^
extra assignment between key-value pairs, expected `,`

---
TOML parse error at line 1, column 44
  |
1 | arrr = { comma-missing = true valid-toml = false }
  |                                            ^
missing comma between key-value pairs, expected `,`

---
TOML parse error at line 1, column 50
  |
1 | arrr = { comma-missing = true valid-toml = false }
  |                                                  ^
trailing commas are not supported in inline tables, expected nothing

---
TOML parse error at line 1, column 26
  |
1 | arrr = { comma-missing = true valid-toml = false }
  |                          ^^^^^^^^^^^^^^^
string values must be quoted, expected literal string
